--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -4,26 +4,26 @@ country=TR
 
 
 network={
-        ssid="Androidby"
-        psk="12345678"
+        ssid="Android"
+        psk="****"
 	priority=2
         key_mgmt=WPA-PSK
 	id_str="cep"
 }
 
 network={
-	ssid="TurkTelekom_T4652"
-	psk="fWy3qDxk"
+	ssid="******"
+	psk="****"
 	key_mgmt=WPA-PSK
 	priority=3
 	id_str="ev"
 }
 network={
-        ssid="AndroidArslan"
-        psk="arslan123"
+        ssid="*****"
+        psk="*****"
         key_mgmt=WPA-PSK
         priority=1
-        id_str="arslancep"
+        id_str="iş"
 }
 
 
